<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menuRate" android:title="@string/menu_rate"
		android:icon="@drawable/ic_menu_star"></item>
	<item android:id="@+id/menuAbout" android:title="@string/menu_about"
		android:icon="@drawable/ic_menu_info_details"></item>
	<item android:id="@+id/menuClearMonitored" android:title="@string/menu_clean_monitoring"
		android:icon="@drawable/ic_menu_view_delete"></item>
	<item android:id="@+id/menuClearHistory" android:title="@string/menu_clean_history"
		android:icon="@drawable/ic_menu_clear_playlist"></item>
	<item android:id="@+id/menuPreferences" android:title="@string/menu_settings"
		android:icon="@drawable/ic_menu_preferences"></item>
	<item android:id="@+id/menuClose" android:title="@string/menu_close"
		android:icon="@drawable/ic_menu_close_clear_cancel"></item>

</menu>
