<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuStartMonitoring"
        android:icon="@drawable/ic_menu_view"
        android:title="@string/menu_start_monitoring">
    </item>
    <item
        android:id="@+id/menuStopMonitoring"
        android:icon="@drawable/ic_menu_view_delete"
        android:title="@string/menu_stop_monitoring">
    </item>
    <item
        android:id="@+id/menuOrderDesc"
        android:icon="@drawable/ic_menu_sort_by_size_desc"
        android:title="@string/menu_details_sort_desc">
    </item>
    <item
        android:id="@+id/menuOrderAsc"
        android:icon="@drawable/ic_menu_sort_by_size_asc"
        android:title="@string/menu_details_sort_asc">
    </item>

</menu>