<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="PLN"
        android:summary="PLN"
        android:entries="@array/currency"
        android:entryValues="@array/currency"
        android:key="currency"
        android:title="@string/preferences_donate_currency" />

    <EditTextPreference
        android:dialogMessage="message"
        android:dialogTitle="@string/preferences_donate_amount"
        android:inputType="number"
        android:key="amount"
        android:defaultValue="5"
        android:summary="5"
        android:negativeButtonText="@string/preferences_donate_amount_notok"
        android:positiveButtonText="@string/preferences_donate_amount_ok"
        android:title="@string/preferences_donate_amount" />

</PreferenceScreen>